Corujao - att CORS configuration, att album repository method,  e add album service interface. Outros ajustes