@@ -9,35 +9,41 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
+/**
+ * Configuração global de CORS.
+ * Garante que os headers Access-Control-Allow-* sejam sempre enviados corretamente.
+ */
 @Configuration
 public class CorsConfig {
 
-    @Value("${app.cors.allowed-origins}")
+    @Value("${app.cors.allowed-origins:*}")
     private String allowedOrigins;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        
-        // Origins permitidas (do application.yml)
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        
-        // Métodos HTTP permitidos
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        
-        // Headers permitidos
+
+        // 🔹 Divide a string em múltiplas origens e remove espaços extras
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .collect(Collectors.toList());
+
+        // 🔹 Usa padrões em vez de origens fixas (melhor para wildcard ou variáveis)
+        configuration.setAllowedOriginPatterns(origins);
+
+        // 🔹 Métodos e headers liberados
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        
-        // Permitir credenciais (cookies, authorization headers)
+        configuration.setExposedHeaders(List.of("Authorization", "Link", "X-Total-Count"));
         configuration.setAllowCredentials(true);
-        
-        // Tempo de cache do preflight (OPTIONS request)
         configuration.setMaxAge(3600L);
-        
+
+        // 🔹 Aplica globalmente
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
-        
+
         return source;
     }
 }
